src/index.css
@font-face {
  font-family: "Helvetica";
  font-style: normal;
  font-weight: 400;
  src: url("./fonts/HelveticaNeueRoman.woff") format("woff");
}

@font-face {
  font-family: "Helvetica";
  font-style: normal;
  font-weight: 500;
  src: url("./fonts/HelveticaNeueMedium.woff") format("woff");
}

@font-face {
  font-family: "Helvetica";
  font-style: normal;
  font-weight: 700;
  src: url("./fonts/HelveticaNeueBold.woff") format("woff");
}

:root {
  --white: #fff;
  --black: #111111;

  /* Primary colors*/
  --primary-1: #2b8379;
  --primary-2: #19a596;
  --primary-3: #7fd1c7;
  --primary-4: #7fd1c7;
  --primary-5: #d0f3ef;

  /* Neutral colors */
  --neutral-1: #2c2c2c;
  --neutral-2: #434343;
  --neutral-3: #94868b;
  --neutral-4: #d9cfd3;
  --neutral-5: #f2ecee;

  /* Accent-blue colors */
  --accent-1: #970e3d;
  --accent-2: #c43464;
  --accent-3: #de7699;
  --accent-4: #e6c3ce;
  --accent-5: #fff2f7;
}

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul,
ol {
  list-style: none;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

body {
  font-family: "Helvetica", sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: var(--black);
}

.text-semi-bold {
  font-weight: 500;
}

.text-light-gray {
  color: #757575;
}

.heading-2 {
  font-size: 24px;
  font-weight: 400;
}

.headline-3 {
  font-size: 20px;
  font-weight: 400;
}

.container {
  margin: 0 auto;
  width: 95vw;
}

.grid {
  display: grid;
}

.grid-filter-column {
  grid-template-columns: 0.2fr 1fr;
}

.pt-20 {
  padding-top: 20px;
}

/* INPUT */
input {
  width: 100%;
  box-shadow: 0 0 0 1px #ccc;
  border-radius: 4px;
  border: none;
  padding: 1rem 2rem 1rem 1rem;
  font-size: 1rem;
}

.input-single {
  margin-bottom: 2rem;
}

.input-group {
  margin-bottom: 2rem;
  display: flex;
  gap: 1rem;
}

.header {
  height: 85vh;
  background: url("https://static.nike.com/a/images/f_auto/dpr_1.0,cs_srgb/w_915,c_limit/3d7f5d02-bf49-403a-a77f-04fc8680c54b/nike-just-do-it.jpg")
    no-repeat;
  background-size: cover;
}

.section-title {
  margin: 100px 0 20px 0;
}

.products {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 15px;
}

.categories {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 15px;
}

.category {
  position: relative;
}

.category-btn {
  position: absolute;
  bottom: 50px;
  left: 50px;
}

.footer {
  margin-top: 80px;
  padding: 0 40px;
  background-color: var(--black);
  color: #fff;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-size: 12px;
}

.footer ul {
  display: flex;
  gap: 10px;
  color: #7e7e7e;
}

/* NAVBAR */
.navbar {
  background-color: white;
  padding: 0 30px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.nav-brand img {
  width: 70px;
}

.navbar ul {
  list-style-type: none;
  overflow: hidden;
  padding-right: 20px;
  text-align: center;
}

.navbar li {
  display: inline-block;
}

.nav-item a {
  text-decoration: none;
  color: var(--black);
  display: inline-block;
  text-align: center;
  padding: 13px 20px;
  min-width: 75px;
  border-bottom: solid 2px transparent;
}

.nav-item:hover a {
  text-decoration: none;
  border-bottom: solid 2px #000;
}

.nav-cart {
  width: 65px;
  text-align: center;
  padding: 10px 25px;
}

/* BUTTONS */
.btn {
  border-radius: 20px;
  display: inline-block;
  cursor: pointer;
  font-weight: 400;
  padding: 10px 25px;
  border: 0;
  background-color: #fff;
  transition: background-color 200ms, color 200ms;
}

.filter-group {
  text-align: left;
  margin-top: 7rem;
}

.filter-group-title {
  display: block;
  padding: 12px 0;
}

.filter-group-content {
  margin-left: -10px;
  margin-top: 5px;
  font-size: 16px;
  font-weight: 400;
}

.pseudo-checkbox-wrapper {
  display: flex;
  background: transparent;
  border: none;
  margin: 4px 2px;
  text-align: left;
  white-space: nowrap;
  width: 96%;
  position: relative;
  overflow-wrap: break-word;
}

.pseudo-checkbox {
  height: 20px;
  width: 20px;
  border: 1px solid #cccccc;
  border-radius: 4px;
  margin-right: 6px;
  margin-top: 2px;
  flex-shrink: 0;
  vertical-align: top;
  display: inline-block;
}

.products {
  margin-top: 7rem;
}

.product {
  margin-bottom: 3.5rem;
}

.product-details {
  padding-top: 0.625rem;
}

.product-img {
  width: 100%;
}

.product-category,
.product-variants {
  color: #757575;
}

.product-price {
  margin-top: 1rem;
}

.product-details-container {
  width: 900px;
  margin: 0 auto;

  padding-top: 5rem;
}

.product-details-layout {
  display: grid;
  place-content: center;
  grid-template-columns: 1fr 0.8fr;
  gap: 5rem;
}

.product-details-title {
  font-size: 1.5rem;
  font-weight: 500;
}

.product-details-subtitle {
  font-weight: 500;
  margin-bottom: 1rem;
}

.product-details-price {
  font-weight: 500;
}

.product-details--select-size {
  margin-top: 2rem;
}

.product-details--sizes {
  margin-top: 0.5rem;
}

.product-details--sizes {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 5px;
}

.btn--select-size {
  border: 1px solid rgb(229, 229, 229);
  border-radius: 4px;
  font-weight: 400;
}

.btn--add-to-bag {
  margin-top: 10px;
  background-color: var(--black);
  color: var(--white);
  font-weight: 500;
  width: 100%;
  padding: 1rem;
  border-radius: 2rem;
}

.product-details-description {
  margin-top: 2rem;
  line-height: 1.5;
  font-weight: 400;
}

.cart-title {
  font-weight: 400;
  font-size: 1.5rem;
  margin-bottom: 1.5rem;
}

.cart-layout {
  width: 1120px;
  margin: 0 auto;

  padding-top: 5rem;

  display: grid;
  place-content: center;
  grid-template-columns: 1fr 0.5fr;
  gap: 2rem;

  font-weight: 400;
  font-size: 0.975rem;
}

.cart-item {
  display: grid;
  grid-template-columns: 0.3fr 1fr;
}

.cart-item--details {
  padding: 0.5rem 0 2rem 1.3rem;
}

.cart-item--primary {
  display: flex;
  justify-content: space-between;
  margin-bottom: 0.3rem;
}

.cart-item--settings {
  display: flex;
  gap: 8px;
}

.cart-item--settings select {
  border: 0px;
  background: none;
  color: rgb(117, 117, 117);
  border-radius: 2px;
  padding-left: 6px;
}

.cart-item--settings option {
  color: rgb(117, 117, 117);
  font-size: 14px;
}

.cart-item--secondary {
  display: flex;
  flex-direction: column;
  gap: 0.3rem;
  color: #757575;
}

.cart-summary {
  padding-top: 0.5rem;
}

.cart-summary--subtotal,
.cart-summary--handling,
.cart-summary--total {
  display: flex;
  justify-content: space-between;
}

.cart-summary--subtotal {
  margin-bottom: 0.8rem;
}

.cart-summary--handling {
  margin-bottom: 1.5rem;
}

.cart-summary--total {
  padding: 1rem 0;
  border-top: solid 1px rgb(229, 229, 229);
  border-bottom: solid 1px rgb(229, 229, 229);
  margin-bottom: 1.2rem;
}

.checkout-page-layout {
  display: grid;
  grid-template-columns: 1fr 1fr;

  width: 900px;
  margin: 0 auto;

  padding-top: 5rem;

  gap: 5rem;
}

.checkout-form--title {
  font-size: 1.25rem;
  font-weight: 500;
  margin-bottom: 1rem;
}

.checkout-form--title:nth-of-type(2) {
  margin-top: 2rem;
}

.checkout-summary--subtotal,
.checkout-summary--delivery,
.checkout-summary--total {
  color: #757575;
  display: flex;
  justify-content: space-between;
  margin-bottom: 0.5rem;
}

.checkout-summary--total {
  color: #111;
  border-top: solid 1px #ccc;
  border-bottom: solid 1px #ccc;
  padding: 0.8rem 0;
}

.checkout-summary--disclaimer {
  font-size: 0.8rem;
  margin-top: 1rem;
}

